# IVI_demo

./: CMakeLists.txt  README.md  audiomanager.cpp  audiomanager.h  magicman.lrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.qml  resource.qrc  videomanager.cpp  videomanager.h
